# tree-sitter-ic10-typed

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  config.json  constants.js  go.mod  grammar.js  opcode-map.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  tmp.ic10  tree-sitter.json
bindings/c/: tree-sitter-ic10.pc.in
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ic10/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterIc10Tests/: TreeSitterIc10Tests.swift
examples/: demo.ic10
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: arithmetic.txt  batch_operations.txt  branching.txt  comparison.txt  device_io.txt  directives.txt  logic_bitwise.txt  special_instructions.txt  stack_operations.txt  trigonometry.txt
