[package]
name = "tree-sitter-ic10-type"
description = "IC10 is the virtual embedded language in the game Stationeers used for automation and control systems."
version = "1.0.0"
authors = ["Joel Hillare <joel@403forbidden.ca>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ic10"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jhillacre/tree-sitter-ic10-type"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
